--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       second commit
       <p>
         some test about nothing!
+        and text about nothing too)
       </p>
     </div>
   </body>
