--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         some test about nothing!
         and text about nothing too)
       </p>
+      <p> mabe we need to add some image/picture?</p>
     </div>
   </body>
 </html>
