header make change!

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         and text about nothing too)
       </p>
       <p> mabe we need to add some image/picture?</p>
+      <h1>LOGO</h1>
     </div>
   </body>
 </html>
