--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       </p>
       <p> mabe we need to add some image/picture?</p>
       <h1>LOGO</h1>
+      <h2>FOOTER2</h2>
     </div>
   </body>
 </html>
