--- a/about me/me.html
+++ b/about me/me.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
-    <link rel="stylesheet" href="styleme.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/styleme.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div class="box0">
       <div class="box1">
         <div class="photo">
     <h1>Шкріба Роман Михайлович</h1>
-    <p class="photocenter"><img src="myphoto.jpg" alt="My photo" width=170px; height="303px"></p>
+    <p class="photocenter"><img src="img/myphoto.jpg" alt="My photo" width=170px; height="303px"></p>
     <p>Головний юрисконсульт ТОВ "Білоцерківські будматеріали"</p>
         </div>
         <div class="box2">
