--- a/about me/me.html
+++ b/about me/me.html
@@ -10,7 +10,7 @@
       <div class="box1">
         <div class="photo">
     <h1>Шкріба Роман Михайлович</h1>
-    <p class="photocenter"><img src="img/myphoto.jpg" alt="My photo" width=170px; height="303px"></p>
+    <p class="photocenter"><img src="img/myphoto.jpg" alt="My photo" width=170px; height="303px"/></p>
     <p>Головний юрисконсульт ТОВ "Білоцерківські будматеріали"</p>
         </div>
         <div class="box2">
