--- a/lessons/leson32.html
+++ b/lessons/leson32.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Document</title>
+    <link rel="stylesheet" href="/lessons/css/normal.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/leson32.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
