--- a/lessons/lesson34.html
+++ b/lessons/lesson34.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="css/lesson34.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+    <h1><a href="google.com">LOGO </a> </h1>
 
+    <a href="google.com">GOOGLE</a>
+    <a href="google.com">GOOGLE</a>
+    <a href="google.com">GOOGLE</a>
+    <a href="google.com">GOOGLE</a>
+
+    <div class="box1">
+
+
+    </div>
+    <div class="box1">
+
+
+    </div>
+    <div class="box1">
+
+
+    </div>
+    <div class="box1">
+
+
+    </div>
   </body>
 </html>
