--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="css/homework3.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+    <header>
+
+    </header>
+    <div class="conteiner">
+    <ul class = "left_menu">
+      <li>Ноутбуки</li>
+      <li>Планшеты</li>
+      <li>Телефоны</li>
+      <li>Телевизоры</li>
+      <li>Бытовая технкика</li>
+      <li>Автотовары</li>
+    </ul>
+    <div class="content">
+        <img src="img/bike.jpg" alt="some bike" />
+
+        <p>
+            Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
+             дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI
+             сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на
+             ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила
+             п'ять століть, але й прижилася в електронному верстуванні,
+             залишаючись по суті незмінною. Вона популяризувалась в 60-их роках
+             минулого сторіччя завдяки виданню зразків шрифтів Letraset, які
+             містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам
+             комп'ютерного верстування на кшталт Aldus Pagemaker, які
+             використовували різні версії Lorem Ipsum.
+        </p>
+    </div>
+    </div>
+    <footer>
+
+    </footer>
 
   </body>
 </html>
