add text and image

--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fitness</title>
-    <link rel="stylesheet" href="../Fitness/css/master.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/reset.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/homework3.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
@@ -20,7 +20,7 @@
       <li>Автотовары</li>
     </ul>
     <div class="content">
-        <img src="img/bike.jpg" alt="some bike" />
+        <img src="img/bike.gif" alt="some bike" />
 
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
