some img was changed

--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <header>
-
+      <img src="img/logo.png" alt="LOGO" />
+        <ul>
+          <li>Главная</li>
+          <li>Товары</li>
+          <li>О_нас</li>
+          <li>Контакты</li>
+        </ul>
     </header>
     <div class="conteiner">
     <ul class = "left_menu">
@@ -20,7 +26,7 @@
       <li>Автотовары</li>
     </ul>
     <div class="content">
-        <img src="img/bike.gif" alt="some bike" />
+        <img src="img/bike.jpg" alt="some bike" />
 
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
