--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -10,13 +10,14 @@
     <header>
       <img src="img/logo.png" alt="LOGO" />
         <ul>
-          <li>Главная</li>
-          <li>Товары</li>
-          <li>О_нас</li>
-          <li>Контакты</li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Товары</a></li>
+          <li><a href="#">О_нас</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
     </header>
     <div class="conteiner">
+
     <ul class = "left_menu">
       <li>Ноутбуки</li>
       <li>Планшеты</li>
@@ -25,8 +26,9 @@
       <li>Бытовая технкика</li>
       <li>Автотовары</li>
     </ul>
+
     <div class="content">
-        <img src="img/bike.jpg" alt="some bike" />
+        <p><img src="img/bike.jpg" alt="some bike" /></p>
 
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
