two menus are reade

--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/homework3.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+    <div class="firstbox">
     <header>
       <img src="img/logo.png" alt="LOGO" />
         <ul>
@@ -17,8 +18,7 @@
         </ul>
     </header>
     <div class="conteiner">
-
-    <ul class = "left_menu">
+    <ul class="left_menu">
       <li>Ноутбуки</li>
       <li>Планшеты</li>
       <li>Телефоны</li>
@@ -26,10 +26,8 @@
       <li>Бытовая технкика</li>
       <li>Автотовары</li>
     </ul>
-
-    <div class="content">
-        <p><img src="img/bike.jpg" alt="some bike" /></p>
-
+      <div class="content">
+        <img src="img/bike.jpg" alt="some bike" />
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
              дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI
@@ -42,11 +40,20 @@
              комп'ютерного верстування на кшталт Aldus Pagemaker, які
              використовували різні версії Lorem Ipsum.
         </p>
-    </div>
+      </div>
     </div>
     <footer>
+      <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Товары</a></li>
+        <li><a href="#">О_нас</a></li>
+        <li><a href="#">Контакты</a></li>
+        <li> 2014 &copy; All rights reserved </li>
+      </ul>
+
+
 
     </footer>
-
+    </div>
   </body>
 </html>
