ище немного сталось

--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/homework3.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="firstbox">
+    <div class="wraper">
     <header>
       <img src="img/logo.png" alt="LOGO" />
         <ul>
@@ -19,12 +19,12 @@
     </header>
     <div class="conteiner">
     <ul class="left_menu">
-      <li>Ноутбуки</li>
-      <li>Планшеты</li>
-      <li>Телефоны</li>
-      <li>Телевизоры</li>
-      <li>Бытовая технкика</li>
-      <li>Автотовары</li>
+      <li><a href="homework3.html">Ноутбуки</a></li>
+      <li><a href="#">Планшеты</a></li>
+      <li><a href="#">Телефоны</a></li>
+      <li><a href="#">Телевизоры</a></li>
+      <li><a href="#">Бытовая технкика</a></li>
+      <li><a href="#">Автотовары</a></li>
     </ul>
       <div class="content">
         <img src="img/bike.jpg" alt="some bike" />
@@ -50,9 +50,6 @@
         <li><a href="#">Контакты</a></li>
         <li> 2014 &copy; All rights reserved </li>
       </ul>
-
-
-
     </footer>
     </div>
   </body>
