some new changes

--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -27,7 +27,9 @@
       <li><a href="#">Автотовары</a></li>
     </ul>
       <div class="content">
-        <img src="img/bike.jpg" alt="some bike" />
+      <img src="img/bike.jpg" alt="some bike" /> 
+      <!--  <div class="img1">
+      </div> -->
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
              дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI
