--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -17,7 +17,7 @@
           <li><a href="#">Контакты</a></li>
         </ul>
     </header>
-    <div class="conteiner">
+ <!--    <div class="conteiner clearfix">
     <ul class="left_menu">
       <li><a href="homework3.html">Ноутбуки</a></li>
       <li><a href="#">Планшеты</a></li>
@@ -41,7 +41,7 @@
              використовували різні версії Lorem Ipsum.
         </p>
       </div>
-    </div>
+    </div> -->
     <footer>
       <ul>
         <li><a href="#">Главная</a></li>
