--- a/Fitness/homework3.html
+++ b/Fitness/homework3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Fitness</title>
     <link rel="stylesheet" href="css/reset.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/homework3.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/homework31.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div class="wraper">
@@ -17,7 +17,7 @@
           <li><a href="#">Контакты</a></li>
         </ul>
     </header>
- <!--    <div class="conteiner clearfix">
+    <div class="conteiner clearfix">
     <ul class="left_menu">
       <li><a href="homework3.html">Ноутбуки</a></li>
       <li><a href="#">Планшеты</a></li>
@@ -27,7 +27,9 @@
       <li><a href="#">Автотовары</a></li>
     </ul>
       <div class="content">
-      <img src="img/bike.jpg" alt="some bike" />
+      <div>
+        <img src="img/bike.jpg" alt="some bike" />
+      </div>
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
              дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI
@@ -41,7 +43,7 @@
              використовували різні версії Lorem Ipsum.
         </p>
       </div>
-    </div> -->
+    </div>
     <footer>
       <ul>
         <li><a href="#">Главная</a></li>
