--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -2,9 +2,66 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Asia Hollidays</title>
+    <link rel="stylesheet" href="css/reset.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/hw4.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+    <div class="wraper">
+    <header>
+      <p>
+        <br>
+        <br>
+        <br>
+      </p>
+      <div class="countries">
+        <p>
+
+        </p>
+        <p>
+
+        </p>
+        <p>
+
+        </p>
+        <p>
+
+        </p>
+        <p>
+
+        </p>
+        <p>
+
+        </p>
+      </div>
+      <div class="logo">
+
+      </div>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </header>
+    <div class="conteiner">
+      <div class="inform">
+
+      </div>
+      <div class="content">
+
+      </div>
+      <div class="news">
+
+      </div>
+    </div>
+  </div>
+<footer>
+
+</footer>
 
   </body>
 </html>
