add pictures and some text

--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -10,34 +10,45 @@
     <div class="wraper">
     <header>
       <p>
-        <br>
-        <br>
-        <br>
+        Наши контакты:<br>
+        +9-098-765-4321<br>
+        +9-0123-456-890<br>
+        info@asia-holidays.com
       </p>
       <div class="countries">
         <p>
-
+          <img src="../img/india.png" alt="India flag" />
+          <a href="#">Индия</a>
         </p>
         <p>
-
+          <img src="../img/nepal.png" alt="Nepal flag" />
+          <a href="#">Непал</a>
         </p>
         <p>
-
+          <img src="../img/tibet.png" alt="Tibet flag" />
+          <a href="#">Тибет</a>
         </p>
         <p>
-
+          <img src="../img/butan.png" alt="Bhutan flag" />
+          <a href="#">Бутан</a>
         </p>
         <p>
-
+          <img src="../img/sri_lanka.png" alt="Sri Lanka flag" />
+          <a href="#">Шри-Ланка</a>
         </p>
         <p>
-
+          <img src="../img/maldives.png" alt="Maldives flag" />
+          <a href="#">Мальдивы</a>
         </p>
       </div>
       <div class="logo">
-
+          <img src="../img/logo.png" alt="LOGO" />
+          Путешествия по Азии
       </div>
-      <ul>
+      <div class="photo">
+        <img src="photo.jpg" alt="Photo" />
+      </div>
+      <ul class="panel">
         <li></li>
         <li></li>
         <li></li>
