--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -49,29 +49,69 @@
         <img src="photo.jpg" alt="Photo" />
       </div>
       <ul class="panel">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Путешествие</a></li>
+        <li><a href="#">Услуги</a></li>
+        <li><a href="#">Партнерам</a></li>
+        <li><a href="#">Отзывы клиентов</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </header>
     <div class="conteiner">
       <div class="inform">
+        <p>
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+        </p>
+        <p>
 
+        </p>
       </div>
       <div class="content">
 
       </div>
       <div class="news">
-
+        <p>
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+        </p>
       </div>
     </div>
   </div>
 <footer>
-
+Copyright(C) asia-holidays.com. 2010
 </footer>
 
   </body>
