--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -41,7 +41,7 @@
           <a href="#">Мальдивы</a>
         </p>
       </div>
-      <div class="logo">
+      <div class="logo clearfix">
           <img src="../img/logo.png" alt="LOGO" />
           Путешествия по Азии
       </div>
@@ -50,9 +50,33 @@
       </div>
       <ul class="panel">
         <li><a href="#">Главная</a></li>
-        <li><a href="#">Путешествие</a></li>
-        <li><a href="#">Услуги</a></li>
-        <li><a href="#">Партнерам</a></li>
+        <li><a href="#">Путешествие</a>
+        <ul class="submenu">
+          <li><a href="#">Путешествие 1</a></li>
+          <li><a href="#">Путешествие 2</a></li>
+          <li><a href="#">Путешествие 3</a></li>
+          <li><a href="#">Путешествие 4</a></li>
+          <li><a href="#">Путешествие 5</a></li>
+        </ul>
+      </li>
+        <li><a href="#">Услуги</a>
+          <ul class="submenu">
+            <li><a href="#">Услуга 1</a></li>
+            <li><a href="#">Услуга 2</a></li>
+            <li><a href="#">Услуга 3</a></li>
+            <li><a href="#">Услуга 4</a></li>
+            <li><a href="#">Услуга 5</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Партнерам</a>
+          <ul class="submenu">
+            <li><a href="#">Предложение 1</a></li>
+            <li><a href="#">Предложение 2</a></li>
+            <li><a href="#">Предложение 3</a></li>
+            <li><a href="#">Предложение 4</a></li>
+            <li><a href="#">Предложение 5</a></li>
+          </ul>
+        </li>
         <li><a href="#">Отзывы клиентов</a></li>
         <li><a href="#">О нас</a></li>
         <li><a href="#">Контакты</a></li>
