playing with css

--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -15,38 +15,38 @@
         +9-0123-456-890<br>
         info@asia-holidays.com
       </p>
+      <div class="logo">
+          <img src="img/logo.png" alt="LOGO" />
+          Путешествия по Азии
+      </div>
       <div class="countries">
         <p>
-          <img src="../img/india.png" alt="India flag" />
+          <img src="img/india.png" alt="India flag" />
           <a href="#">Индия</a>
         </p>
         <p>
-          <img src="../img/nepal.png" alt="Nepal flag" />
+          <img src="img/nepal.png" alt="Nepal flag" />
           <a href="#">Непал</a>
         </p>
         <p>
-          <img src="../img/tibet.png" alt="Tibet flag" />
+          <img src="img/tibet.png" alt="Tibet flag" />
           <a href="#">Тибет</a>
         </p>
         <p>
-          <img src="../img/butan.png" alt="Bhutan flag" />
+          <img src="img/butan.png" alt="Bhutan flag" />
           <a href="#">Бутан</a>
         </p>
         <p>
-          <img src="../img/sri_lanka.png" alt="Sri Lanka flag" />
+          <img src="img/sri_lanka.png" alt="Sri Lanka flag" />
           <a href="#">Шри-Ланка</a>
         </p>
         <p>
-          <img src="../img/maldives.png" alt="Maldives flag" />
+          <img src="img/maldives.png" alt="Maldives flag" />
           <a href="#">Мальдивы</a>
         </p>
       </div>
-      <div class="logo clearfix">
-          <img src="../img/logo.png" alt="LOGO" />
-          Путешествия по Азии
-      </div>
-      <div class="photo">
-        <img src="photo.jpg" alt="Photo" />
+      <div class="photo clearfix">
+        <img src="img/photo.jpg" alt="Photo" />
       </div>
       <ul class="panel">
         <li><a href="#">Главная</a></li>
@@ -83,7 +83,7 @@
       </ul>
     </header>
     <div class="conteiner">
-      <div class="inform">
+      <div class="inf">
         <p>
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
@@ -99,9 +99,6 @@
         <p>
 
         </p>
-      </div>
-      <div class="content">
-
       </div>
       <div class="news">
         <p>
@@ -131,6 +128,9 @@
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
         </p>
+      </div>
+      <div class="content clearfix">
+
       </div>
     </div>
   </div>
