--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/hw4.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="wraper">
+    <div class="wraper  clearfix">
     <header>
       <p>
         Наши контакты:<br>
@@ -16,7 +16,9 @@
         info@asia-holidays.com
       </p>
       <div class="logo">
-          <img src="img/logo.png" alt="LOGO" />
+          <p>
+            <img src="img/logo.png" alt="LOGO" />
+          </p>
           Путешествия по Азии
       </div>
       <div class="countries">
@@ -45,8 +47,8 @@
           <a href="#">Мальдивы</a>
         </p>
       </div>
-      <div class="photo clearfix">
-        <img src="img/photo.jpg" alt="Photo" />
+      <div class="photo">
+      <!--  <img src="img/photo.jpg" alt="Photo" /> -->
       </div>
       <ul class="panel">
         <li><a href="#">Главная</a></li>
@@ -129,8 +131,11 @@
           Lorem ipsum dolor sit amet
         </p>
       </div>
-      <div class="content clearfix">
-
+      <div class="content">
+        dddddddddddddddddddddddddddddddddd
+        ddddddddddddddddddddddddddddddddd
+        dddddddddddddddddddddddddddddddddd
+        dddddddddddddddddddddddddddddddddd
       </div>
     </div>
   </div>
