--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/hw4.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="wraper  clearfix">
+    <div class="wraper">
     <header>
       <p>
         Наши контакты:<br>
@@ -16,34 +16,32 @@
         info@asia-holidays.com
       </p>
       <div class="logo">
-          <p>
-            <img src="img/logo.png" alt="LOGO" />
-          </p>
+        <img src="img/logo.png" alt="LOGO" /> <br>
           Путешествия по Азии
       </div>
       <div class="countries">
         <p>
-          <img src="img/india.png" alt="India flag" />
+          <img src="img/india.png" alt="India flag" /><br>
           <a href="#">Индия</a>
         </p>
         <p>
-          <img src="img/nepal.png" alt="Nepal flag" />
+          <img src="img/nepal.png" alt="Nepal flag" /><br>
           <a href="#">Непал</a>
         </p>
         <p>
-          <img src="img/tibet.png" alt="Tibet flag" />
+          <img src="img/tibet.png" alt="Tibet flag" /><br>
           <a href="#">Тибет</a>
         </p>
         <p>
-          <img src="img/butan.png" alt="Bhutan flag" />
+          <img src="img/butan.png" alt="Bhutan flag" /><br>
           <a href="#">Бутан</a>
         </p>
         <p>
-          <img src="img/sri_lanka.png" alt="Sri Lanka flag" />
+          <img src="img/sri_lanka.png" alt="Sri Lanka flag" /><br>
           <a href="#">Шри-Ланка</a>
         </p>
         <p>
-          <img src="img/maldives.png" alt="Maldives flag" />
+          <img src="img/maldives.png" alt="Maldives flag" /><br>
           <a href="#">Мальдивы</a>
         </p>
       </div>
@@ -85,7 +83,7 @@
       </ul>
     </header>
     <div class="conteiner">
-      <div class="inf">
+      <aside class="inf">
         <p>
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
@@ -101,8 +99,8 @@
         <p>
 
         </p>
-      </div>
-      <div class="news">
+      </aside>
+      <aside class="news">
         <p>
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
@@ -130,7 +128,7 @@
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
         </p>
-      </div>
+      </aside>
       <div class="content">
         dddddddddddddddddddddddddddddddddd
         ddddddddddddddddddddddddddddddddd
