little bit had left

--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -21,28 +21,28 @@
       </div>
       <div class="countries">
         <p>
-          <img src="img/india.png" alt="India flag" /><br>
-          <a href="#">Индия</a>
-        </p>
-        <p>
-          <img src="img/nepal.png" alt="Nepal flag" /><br>
-          <a href="#">Непал</a>
-        </p>
-        <p>
-          <img src="img/tibet.png" alt="Tibet flag" /><br>
-          <a href="#">Тибет</a>
-        </p>
-        <p>
-          <img src="img/butan.png" alt="Bhutan flag" /><br>
-          <a href="#">Бутан</a>
+          <img src="img/maldives.png" alt="Maldives flag" /><br>
+          <a href="#">Мальдивы</a>
         </p>
         <p>
           <img src="img/sri_lanka.png" alt="Sri Lanka flag" /><br>
           <a href="#">Шри-Ланка</a>
         </p>
         <p>
-          <img src="img/maldives.png" alt="Maldives flag" /><br>
-          <a href="#">Мальдивы</a>
+          <img src="img/butan.png" alt="Bhutan flag" /><br>
+          <a href="#">Бутан</a>
+        </p>
+        <p>
+          <img src="img/tibet.png" alt="Tibet flag" /><br>
+          <a href="#">Тибет</a>
+        </p>
+        <p>
+          <img src="img/nepal.png" alt="Nepal flag" /><br>
+          <a href="#">Непал</a>
+        </p>
+        <p>
+          <img src="img/india.png" alt="India flag" /><br>
+          <a href="#">Индия</a>
         </p>
       </div>
       <div class="photo">
@@ -130,10 +130,20 @@
         </p>
       </aside>
       <div class="content">
-        dddddddddddddddddddddddddddddddddd
-        ddddddddddddddddddddddddddddddddd
-        dddddddddddddddddddddddddddddddddd
-        dddddddddddddddddddddddddddddddddd
+        <p>
+        Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis
+        nostrud exercitation ullamco laboris
+        nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit
+        in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt
+        in culpa qui officia deserunt mollit
+        anim id est laborum.
+        </p>
       </div>
     </div>
   </div>
