--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -84,6 +84,9 @@
     </header>
     <div class="conteiner">
       <aside class="inf">
+        <p class="h1">
+          Информация
+        </p>
         <p>
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
@@ -101,6 +104,9 @@
         </p>
       </aside>
       <aside class="news">
+        <p class="h1">
+          Новости          
+        </p>
         <p>
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
