--- a/asiaholl/hw4.html
+++ b/asiaholl/hw4.html
@@ -46,11 +46,10 @@
         </p>
       </div>
       <div class="photo">
-      <!--  <img src="img/photo.jpg" alt="Photo" /> -->
       </div>
       <ul class="panel">
         <li><a href="#">Главная</a></li>
-        <li><a href="#">Путешествие</a>
+        <li><a href="#">Путешествие &#9660;</a>
         <ul class="submenu">
           <li><a href="#">Путешествие 1</a></li>
           <li><a href="#">Путешествие 2</a></li>
@@ -59,7 +58,7 @@
           <li><a href="#">Путешествие 5</a></li>
         </ul>
       </li>
-        <li><a href="#">Услуги</a>
+        <li><a href="#">Услуги &#9660;</a>
           <ul class="submenu">
             <li><a href="#">Услуга 1</a></li>
             <li><a href="#">Услуга 2</a></li>
@@ -68,7 +67,7 @@
             <li><a href="#">Услуга 5</a></li>
           </ul>
         </li>
-        <li><a href="#">Партнерам</a>
+        <li><a href="#">Партнерам &#9660;</a>
           <ul class="submenu">
             <li><a href="#">Предложение 1</a></li>
             <li><a href="#">Предложение 2</a></li>
@@ -87,40 +86,33 @@
         <p class="h1">
           Информация
         </p>
-        <p>
+        <p class="inf_p">
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
         </p>
-        <p>
+        <p class="inf_p">
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
         </p>
-        <p>
+        <p class="inf_p">
+
+
 
         </p>
       </aside>
       <aside class="news">
         <p class="h1">
-          Новости          
+          Новости
         </p>
-        <p>
+        <p class="news_p">
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-          Lorem ipsum dolor sit amet
-        </p>
-        <p>
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
@@ -129,7 +121,16 @@
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
         </p>
-        <p>
+        <p class="news_p">
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+          Lorem ipsum dolor sit amet
+        </p>
+        <p class="news_p">
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
           Lorem ipsum dolor sit amet
@@ -153,9 +154,8 @@
       </div>
     </div>
   </div>
-<footer>
-Copyright(C) asia-holidays.com. 2010
-</footer>
-
+  <footer>
+    Copyright(C) asia-holidays.com. 2010
+  </footer>
   </body>
 </html>
