--- a/Fitness/homework31.html
+++ b/Fitness/homework31.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Fitness</title>
-    <link rel="stylesheet" href="css/reset.css" media="screen" title="no title">
-    <link rel="stylesheet" href="css/homework3.css" media="screen" title="no title">
+    <link rel="stylesheet" href="css/reset.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/homework31.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div class="wraper">
@@ -17,7 +17,7 @@
           <li><a href="#">Контакты</a></li>
         </ul>
     </header>
-    <div class="conteiner">
+    <div class="conteiner clearfix">
     <ul class="left_menu">
       <li><a href="#">Ноутбуки</a></li>
       <li><a href="#">Планшеты</a></li>
@@ -27,7 +27,8 @@
       <li><a href="#">Автотовары</a></li>
     </ul>
       <div class="content">
-      <div class ="photo">
+      <div>
+        <img src="img/bike.jpg" alt="some bike" />
       </div>
         <p>
             Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
@@ -42,7 +43,7 @@
              використовували різні версії Lorem Ipsum.
         </p>
       </div>
- </div>
+    </div>
     <footer>
       <ul>
         <li><a href="#">Главная</a></li>
