--- a/index.html
+++ b/index.html
@@ -2,19 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>document</title>
+    <title>test page</title>
   </head>
   <body>
-    <div class="">
-      first commit
-      second commit
-      <p>
-        some test about nothing!
-        and text about nothing too)
-      </p>
-      <p> mabe we need to add some image/picture?</p>
-      <h1>LOGO</h1>
-      <h2>FOOTER2</h2>
-    </div>
-  </body>
+    <p>
+      testing how its to work from Ubuntu!
+    </p>
+      </body>
 </html>
