--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -9,33 +9,36 @@
   <body>
     <header>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#">Meu YouBike</a></li>
+        <li><a href="#">Vender</a></li>
+        <li><a href="#">Forum</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="#">Ajuda</a></li>
       </ul>
       <p>
-
+        Minhas Ofertas
       </p>
       <p>
-
+        Ola! <a href="#">Enrar</a>
+        ou   <a href="#">Cadastre-se</a>
       </p>
     </header>
     <div class="wraper">
       <header>
         Cadastre-se
       </header>
-      <section>
-        <input type="text" name="First name" value="">
+      <section class="regbox">
+        <input type="button" name="Log in Facebook" value="">
+        <input type="text" name="First name" value="" >
         <input type="text" name="Last name" value="">
         <input type="email" name="Email address" value="">
         <input type="password" name="Choose password" value="">
         <input type="password" name="Confirm password" value="">
-        <input type="checkbox" name="Agree updates" value="">
-        <input type="button" name="Greate me account" value="">
+        <input type="checkbox" name="Agree updates" value="Send me Youbike updates and tips">
+        <input type="button" name="Greate my account" value="Greate me Account">
         <p>
-
+            By clicking the button above, you agree to the Terms of Service
+            Xiew our Privacy Policy.
         </p>
         </section>
     </div>
