--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -7,14 +7,7 @@
     <link rel="stylesheet" href="css/hw5.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <header>
-      <ul>
-        <li><a href="#">Meu YouBike</a></li>
-        <li><a href="#">Vender</a></li>
-        <li><a href="#">Forum</a></li>
-        <li><a href="#">Contato</a></li>
-        <li><a href="#">Ajuda</a></li>
-      </ul>
+      <header class="first">
       <p>
         Minhas Ofertas
       </p>
@@ -22,6 +15,13 @@
         Ola! <a href="#">Enrar</a>
         ou   <a href="#">Cadastre-se</a>
       </p>
+      <ul>
+        <li><a href="#">Meu YouBike</a></li>
+        <li><a href="#">Vender</a></li>
+        <li><a href="#">Forum</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="#">Ajuda</a></li>
+      </ul>
     </header>
     <div class="wraper">
       <header>
