--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -28,13 +28,16 @@
         Cadastre-se
       </header>
       <section class="regbox">
-        <input type="button" name="Log in Facebook" value="">
-        <input type="text" name="First name" value="" >
-        <input type="text" name="Last name" value="">
-        <input type="email" name="Email address" value="">
-        <input type="password" name="Choose password" value="">
-        <input type="password" name="Confirm password" value="">
-        <input type="checkbox" name="Agree updates" value="Send me Youbike updates and tips">
+        <button type="button" name="Log in Facebook"><b>Log in</b> whith <b>Facebook   ></b></button>
+        <input type="text" name="First name" placeholder="First Name" value="" >
+        <input type="text" name="Last name" placeholder="Last Name" value="">
+        <input type="email" name="Email address" placeholder="Email Address" value="">
+        <input type="password" name="Choose password" placeholder="Choose Password" value="">
+        <input type="password" name="Confirm password" placeholder="Password Confirm" value="">
+        <input type="checkbox" name="Agree updates">
+        <p>
+          Send me Youbike updates and tips
+        </p>
         <input type="button" name="Greate my account" value="Greate me Account">
         <p>
             By clicking the button above, you agree to the Terms of Service
