--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -8,13 +8,14 @@
   </head>
   <body>
       <header class="first">
-      <p>
-        Minhas Ofertas
-      </p>
-      <p>
+      <p class="reglink">
         Ola! <a href="#">Enrar</a>
         ou   <a href="#">Cadastre-se</a>
       </p>
+      <p>
+        Minhas Ofertas
+      </p>
+        <img src="img/flag.png" alt="flag" />
       <ul>
         <li><a href="#">Meu YouBike</a></li>
         <li><a href="#">Vender</a></li>
@@ -28,7 +29,9 @@
         Cadastre-se
       </header>
       <section class="regbox">
-        <button type="button" name="Log in Facebook"><b>Log in</b> whith <b>Facebook   ></b></button>
+        <button type="button" name="Log in Facebook">
+          <b>Log in</b> whith <b>Facebook   ></b>
+        </button>
         <input type="text" name="First name" placeholder="First Name" value="" >
         <input type="text" name="Last name" placeholder="Last Name" value="">
         <input type="email" name="Email address" placeholder="Email Address" value="">
