--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -30,8 +30,11 @@
       </header>
       <section class="regbox">
         <button type="button" name="Log in Facebook">
-          <b>Log in</b> whith <b>Facebook   ></b>
+          <b>Log in</b> whith <b>Facebook></b>
         </button>
+        <p class="line">
+          OU
+        </p>
         <input type="text" name="First name" placeholder="First Name" value="" >
         <input type="text" name="Last name" placeholder="Last Name" value="">
         <input type="email" name="Email address" placeholder="Email Address" value="">
@@ -41,7 +44,7 @@
         <p>
           Send me Youbike updates and tips
         </p>
-        <input type="button" name="Greate my account" value="Greate me Account">
+        <input type="submit" name="Greate my account" value="Greate me Account">
         <p>
             By clicking the button above, you agree to the Terms of Service
             Xiew our Privacy Policy.
