--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -30,7 +30,8 @@
       </header>
       <section class="regbox">
         <button type="button" name="Log in Facebook">
-          <b>Log in</b> whith <b>Facebook></b>
+          <!--   <img src="img/fbbutton.png" alt="button" />
+       <b>Log in</b> whith <b>Facebook></b> -->
         </button>
         <p class="line">
           OU
