--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -30,19 +30,19 @@
       </header>
       <section class="regbox">
         <button type="button" name="Log in Facebook">
-          <!--   <img src="img/fbbutton.png" alt="button" />
-       <b>Log in</b> whith <b>Facebook></b> -->
+               <img src="img/fbbutton.png" alt="button" />
+                <!--   <b>Log in</b> whith <b>Facebook></b> -->
         </button>
         <p class="line">
           OU
-        </p>
+        </p class="reginput">
         <input type="text" name="First name" placeholder="First Name" value="" >
         <input type="text" name="Last name" placeholder="Last Name" value="">
         <input type="email" name="Email address" placeholder="Email Address" value="">
         <input type="password" name="Choose password" placeholder="Choose Password" value="">
         <input type="password" name="Confirm password" placeholder="Password Confirm" value="">
-        <input type="checkbox" name="Agree updates">
         <p>
+          <input type="checkbox" name="Agree updates">
           Send me Youbike updates and tips
         </p>
         <input type="submit" name="Greate my account" value="Greate me Account">
