--- a/bike/hw5.html
+++ b/bike/hw5.html
@@ -35,17 +35,19 @@
         </button>
         <p class="line">
           OU
-        </p class="reginput">
+        </p>
+        <p class="reginput">
         <input type="text" name="First name" placeholder="First Name" value="" >
         <input type="text" name="Last name" placeholder="Last Name" value="">
         <input type="email" name="Email address" placeholder="Email Address" value="">
         <input type="password" name="Choose password" placeholder="Choose Password" value="">
         <input type="password" name="Confirm password" placeholder="Password Confirm" value="">
+        </p>
         <p>
           <input type="checkbox" name="Agree updates">
           Send me Youbike updates and tips
         </p>
-        <input type="submit" name="Greate my account" value="Greate me Account">
+        <input  class="subbutton" type="submit" name="Greate my account" value="Greate me Account">
         <p>
             By clicking the button above, you agree to the Terms of Service
             Xiew our Privacy Policy.
