--- a/dz3/homework3.html
+++ b/dz3/homework3.html
@@ -11,10 +11,10 @@
       <header>
       <img src="img/logo.png" alt="LOGO" />
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Товары</a></li>
-          <li><a href="#">О_нас</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#">Главная</a>
+          <li><a href="#">Товары</a>
+          <li><a href="#">О_нас</a>
+          <li><a href="#">Контакты</a>
         </ul>
     </header>
     <div class="conteiner">
