--- a/dz4/hw4.html
+++ b/dz4/hw4.html
@@ -50,7 +50,7 @@
       <div class="photo">
       </div>
       <ul class="panel">
-        <li><a href="#">Главная</a></li>
+        <li><a href="#">Главная</a>
         <li><a href="#">Путешествие &#9660;</a>
         <ul class="submenu">
           <li><a href="#">Путешествие 1</a></li>
@@ -59,7 +59,6 @@
           <li><a href="#">Путешествие 4</a></li>
           <li><a href="#">Путешествие 5</a></li>
         </ul>
-      </li>
         <li><a href="#">Услуги &#9660;</a>
           <ul class="submenu">
             <li><a href="#">Услуга 1</a></li>
@@ -68,7 +67,6 @@
             <li><a href="#">Услуга 4</a></li>
             <li><a href="#">Услуга 5</a></li>
           </ul>
-        </li>
         <li><a href="#">Партнерам &#9660;</a>
           <ul class="submenu">
             <li><a href="#">Предложение 1</a></li>
@@ -77,10 +75,9 @@
             <li><a href="#">Предложение 4</a></li>
             <li><a href="#">Предложение 5</a></li>
           </ul>
-        </li>
-        <li><a href="#">Отзывы клиентов</a></li>
-        <li><a href="#">О нас</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a href="#">Отзывы клиентов</a>
+        <li><a href="#">О нас</a>
+        <li><a href="#">Контакты</a>
       </ul>
     </header>
     <div class="conteiner">
