--- a/dz5/hw5.html
+++ b/dz5/hw5.html
@@ -17,11 +17,11 @@
       </p>
         <img src="img/flag.png" alt="flag" />
       <ul>
-        <li><a href="#">Meu YouBike</a></li>
-        <li><a href="#">Vender</a></li>
-        <li><a href="#">Forum</a></li>
-        <li><a href="#">Contato</a></li>
-        <li><a href="#">Ajuda</a></li>
+        <li><a href="#">Meu YouBike</a>
+        <li><a href="#">Vender</a>
+        <li><a href="#">Forum</a>
+        <li><a href="#">Contato</a>
+        <li><a href="#">Ajuda</a>
       </ul>
     </header>
     <div class="wraper">
@@ -47,16 +47,12 @@
           <input type="checkbox" name="Agree updates">
           Send me Youbike updates and tips
         </p>
-        <input  class="subbutton" type="submit" name="Greate my account" value="Greate me Account">
+        <button class="subbutton"> Greate my account </button>
         <p>
             By clicking the button above, you agree to the Terms of Service
             Xiew our Privacy Policy.
         </p>
         </section>
     </div>
-    <header></header>
-    <p>
-      
-    </p>
   </body>
 </html>
