play with button

--- a/dz5/hw5.html
+++ b/dz5/hw5.html
@@ -30,8 +30,7 @@
       </header>
       <section class="regbox">
         <button type="button" name="Log in Facebook">
-               <img src="img/fbbutton.png" alt="button" />
-                <!--   <b>Log in</b> whith <b>Facebook></b> -->
+       <b>Log in</b> whith <b>Facebook></b> 
         </button>
         <p class="line">
           OU
