--- a/dz7-8/hw78.html
+++ b/dz7-8/hw78.html
@@ -9,15 +9,15 @@
   <body>
     <header class="menu">
       <p class="menu__style_text">
-
+        pingbuller
       </p>
       <ul class="menu__style">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">products</a></li>
+        <li><a href="#">lorem ipsum</a></li>
+        <li><a href="#">dolor sit amet</a></li>
       </ul>
     </header>
     <header class="slider">
@@ -54,13 +54,38 @@
     </header>
     <section class="content">
       <div class="content__about">
-
+        <img src="img/icons.png" alt="key" />
+        <h4> about our company</h4>
+        <p class="content__about_text">
+        Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+        praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+        nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+        pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+        neque. Mauris nec metus ultricies erat consequat dignissim non
+        eu nisl.
+        </p>
       </div>
       <div class="content__about">
-
+        <h4> about our company</h4>
+        <p class="content__about_text">
+          Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+          praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+          pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+          neque. Mauris nec metus ultricies erat consequat dignissim non
+          eu nisl.
+        </p>
       </div>
       <div class="content__about">
-
+        <h4> about our company</h4>
+        <p class="content__about_text">
+          Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+          praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+          pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+          neque. Mauris nec metus ultricies erat consequat dignissim non
+          eu nisl.
+        </p>
       </div>
     </section>
     <div class="wraper">
@@ -68,9 +93,30 @@
 
     <section class="blog">
       <div class="blog__blog">
-
+        <h4>pingbuller starts here</h4>
+        <p class="content__about_text">
+          Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+          praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+          pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+          neque. Mauris nec metus ultricies erat consequat dignissim non
+          eu nisl.
+        </p>
       </div>
       <div class="blog__news">
+        <p class="blog__news_first">
+          nunc turpis neque feugiant eget
+          posted by Admin on March 13 2012 in Recent News
+        </p>
+        <p class="blog__news_second">
+          nunc turpis neque feugiant eget
+          posted by Admin on March 13 2012 in Category
+        </p>
+        <p class="blog__news_third">
+          nunc turpis neque feugiant eget
+          posted by Admin on March 13 2012 in Blog Updates
+        </p>
+        <a href="#">read more here</a>
 
       </div>
       <div class="blog__logo">
@@ -92,12 +138,12 @@
     </section>
     <footer class="menu">
       <ul class="menu__style">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">products</a></li>
+        <li><a href="#">lorem ipsum</a></li>
+        <li><a href="#">dolor sit amet</a></li>
       </ul>
     </footer>
     </div>
