some work was made

--- a/dz7-8/hw78.html
+++ b/dz7-8/hw78.html
@@ -21,23 +21,30 @@
       </ul>
     </header>
     <header class="slider">
-      <h1>Lorem Ipsum Dolor</h1>
-      <h3>it will make all of your dreams come true</h3>
-      <p class="slider__text">
+      <div class="slider__inform">
+        <h1>lorem ipsum dolor</h1>
+        <h3>it will make all of your dreams come true</h3>
+        <p class="slider__text">
          Semper sollicitudin gravida eget, vestibulum sit amet sapien.
          Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam
          venenatis hendrerit est at volutpat. Morbi elementum euismod
          lacus id semper. In odio nunc, imperdiet eget aliquam quis,
          euismod id lectus. Nulla interdum arcu et felis aliquam a tempus
          lectus lobortis.
-      </p>
-        <div class="img">
-          <div class="img_iphone">
+        </p>
+      </div>
+
+        <div class="slider__img">
+          <div class="slider__img__iphone2">
 
           </div>
-          <div class="img__iphone2">
+          <div class="slider__img_iphone">
+            <div class="slider__img_circle_play">
+
+            </div>
 
           </div>
+
           <div class="slider__circle">
 
           </div>
@@ -102,6 +109,18 @@
           neque. Mauris nec metus ultricies erat consequat dignissim non
           eu nisl.
         </p>
+        <div class="blog__blog_circule">
+
+        </div>
+        <div class="blog__blog_circule">
+
+        </div>
+        <div class="blog__blog_circule">
+
+        </div>
+        <div class="blog__blog_circule">
+
+        </div>
       </div>
       <div class="blog__news">
         <p class="blog__news_first">
@@ -145,6 +164,9 @@
         <li><a href="#">lorem ipsum</a></li>
         <li><a href="#">dolor sit amet</a></li>
       </ul>
+      <p>
+        Designed by Pingbull AS
+      </p>
     </footer>
     </div>
   </body>
