--- a/dz7-8/hw78.html
+++ b/dz7-8/hw78.html
@@ -65,34 +65,37 @@
         <h4> about our company</h4>
         <p class="content__about_text">
         Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
-        praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+        Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
         nisi convallis auctor. Nam vitae lectus eu libero pellentesque
         pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
         neque. Mauris nec metus ultricies erat consequat dignissim non
         eu nisl.
         </p>
+        <a href="#">read me</a>
       </div>
       <div class="content__about">
         <h4> about our company</h4>
         <p class="content__about_text">
           Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
-          praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
           nisi convallis auctor. Nam vitae lectus eu libero pellentesque
           pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
           neque. Mauris nec metus ultricies erat consequat dignissim non
           eu nisl.
         </p>
+        <a href="#">read me</a>
       </div>
       <div class="content__about">
         <h4> about our company</h4>
         <p class="content__about_text">
           Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
-          praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
           nisi convallis auctor. Nam vitae lectus eu libero pellentesque
           pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
           neque. Mauris nec metus ultricies erat consequat dignissim non
           eu nisl.
         </p>
+        <a href="#">read me</a>
       </div>
     </section>
     <div class="wraper">
@@ -103,7 +106,7 @@
         <h4>pingbuller starts here</h4>
         <p class="content__about_text">
           Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
-          praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
           nisi convallis auctor. Nam vitae lectus eu libero pellentesque
           pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
           neque. Mauris nec metus ultricies erat consequat dignissim non
@@ -143,15 +146,43 @@
       </div>
 
     </section>
-    <section class="content">
-      <div class="content__mc">
+    <section class="content2">
+      <div class="content2__text">
+        <h2>pigbuller</h2>
+        <p>
+          Copyright 2013, Pingbull AS
+        </p>
+        <p>
+          Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+          Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+          pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+          neque. Mauris nec metus ultricies erat consequat dignissim non
+          eu nisl.
+        </p>
+      </div>
+      <div class="content2__text">
+        <h4>recent comments</h4>
+        <p>
+          Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+          Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+          pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+          neque. Mauris nec metus ultricies erat consequat dignissim non
+          eu nisl.
+        </p>
 
       </div>
-      <div class="content__comments">
-
-      </div>
-      <div class="content__news">
-
+      <div class="content2__text">
+        <h4>news categories</h4>
+        <p>
+          Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
+          Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget
+          nisi convallis auctor. Nam vitae lectus eu libero pellentesque
+          pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis
+          neque. Mauris nec metus ultricies erat consequat dignissim non
+          eu nisl.
+        </p>
       </div>
 
     </section>
