--- a/dz5/hw5.html
+++ b/dz5/hw5.html
@@ -30,7 +30,18 @@
       </header>
       <section class="regbox">
         <button type="button" name="Log in Facebook">
-       <b>Log in</b> whith <b>Facebook></b> 
+          <p class="faceicon">
+            f
+          </p>
+       <p>
+         Log in
+       </p>
+       <p>
+         whith
+       </p>
+       <p>
+         Facebook  >
+       </p>
         </button>
         <p class="line">
           OU
